<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">Download Status</string>
    <string name="rb_glide">Glide-Image Loading Library by BumpTech</string>
    <string name="rb_loadApp">LoadApp - Current repository by Udacity</string>
    <string name="rb_Retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc.</string>
    <string name="download_channel_name">Download</string>
    <string name="cd_lbl_filename">File Name:</string>
    <string name="cd_lbl_status">Status:</string>
    <string name="tool_text_fail">Fail</string>
    <string name="btn_ok_text">OK</string>
</resources>
