<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/rg_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/clouddownload"
        tools:srcCompat="@drawable/clouddownload" />

    <RadioGroup
        android:id="@+id/rg_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/custom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView">

        <RadioButton
            android:id="@+id/radioButtonGlide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_glide"
            android:textSize="@dimen/detail_content_main_textSize" />

        <RadioButton
            android:id="@+id/radioButtonLoadApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_loadApp"
            android:textSize="@dimen/detail_content_main_textSize" />

        <RadioButton
            android:id="@+id/rbRetrofit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_Retrofit"
            android:textSize="@dimen/detail_content_main_textSize" />
    </RadioGroup>

    <com.onedudedesign.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:colorBtnLoadText="@color/secondaryTextColor"
        app:colorBtnProgress="@color/colorAccent"
        app:colorBtnStart="@color/colorPrimary"
        app:colorBtnText="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_main" />

</androidx.constraintlayout.widget.ConstraintLayout>